set up hash router

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
             font-family: verdana;
             padding: 1rem;
         }
+        nav {
+            display: flex;
+            justify-content: space-around;
+        }
+        nav a{
+            padding: 0.5rem;
+        }
+        nav a.selected {
+            background-color: slateBlue;
+            color: cornsilk;
+        }
     </style>
   </head>
   <body>
